--- a/styles/frame-styles.css
+++ b/styles/frame-styles.css
@@ -79,6 +79,13 @@ fieldset label {
     width: 100%;
 }
 
+/* .wrapper_title {
+    visibility: hidden;
+} */
+/* .lm_tabs{
+    display: none
+} */
+
 .face {
     width: 100%;
     height: 100%;
